--- a/R1_Intro_DS110_F23.ipynb
+++ b/R1_Intro_DS110_F23.ipynb
@@ -316,7 +316,9 @@
         "id": "aRfQWF-xCw3v"
       },
       "outputs": [],
-      "source": []
+      "source": [
+        "rexctvygbhnuijmnhugyvtfcrdx"
+      ]
     },
     {
       "cell_type": "markdown",
